# hw

./: .clang-format  .gitignore  LICENSE  README.md
.github/workflows/: build-and-lint.yml  python-tests.yml  ruff.yml
first_kr/: maxsun.c  palindrom.c  sort.c
hw_c/12_hw_c_bin/: CMakeLists.txt  bin.c
hw_c/12_hw_c_double/: CMakeLists.txt  double.c  double.h  main.c  readme.md  test.c
hw_c/4_sort_hw_c/: 4_hw_c_sort.c  CMakeLists.txt  README.md  howToMake.txt  main.c  program  sort  sort.c  sort.h  sort.s
hw_c/5_hw_c_balance_skobka/: CMakeLIsts.txt  balance.c  readme.md
hw_c/5_hw_c_sort_station/: CMakeLists.txt  station.c
hw_c/5_hw_c_sort_station/5_hw_c_stack/: stack.c  stack.h
hw_c/5_hw_c_stack/: stack.c
hw_c/6_hw_c_sort_list/: CMakeLists.txt  list.c  list.h  readme.md  readme.txt  sortList.c  sort_list.c
hw_c/chutalochka/: list.c  list.h  task.c
hw_c/cmake_test1/: CMakeLists.txt  main.c
hw_c/hw_13_september/: CMakeLists.txt  array  array.c  c  chastnoe  chastnoe.c  lucky.c  mul  mul.c
hw_c/hw_19_september/: CMakeLIsts.txt  find_zero  find_zero.c  skobka  skobka.c  str.c  string  string.c
hw_c/second_kr/: CMakeLists.txt  list.c  list.h  palindrom.c
src/: euclid.py
src/10_hw_python_dfs/: dfc.py
src/1_hw_python/: money.py
src/3_hw_python_sort/: sort.py
src/4_hw_python_ferz/: complexity.md  perebor_ferz.py  rekur_ferz.py
src/5_hw_python/: pyproject.toml
src/6_hw_python_heap_sort/: heap_sort.py  other_sort.py  test_heap_sort.py  test_with_other_sort.py
src/7_hw_python_carry/: carry.py
src/9_hw_python_haffman_code/: main.py
(+6 files in other folders)
